# OffDRL

./: LICENSE  README.md  pyproject.toml
OffDRL/: __init__.py
OffDRL/backbone/: __init__.py  gru.py  lstm.py  mlp.py  transformer.py
OffDRL/buffer/: __init__.py  buffer.py
OffDRL/generation/: __init__.py  diffusion.py  gan.py  vae.py
OffDRL/kernel/: __init__.py  diffusion.py
OffDRL/modules/: __init__.py  actor.py  critic.py  dist.py  ensemble_critic.py
OffDRL/policy/: __init__.py
OffDRL/policy/generative_rl/: __init__.py  diffusion_ql.py
OffDRL/policy/model_free/: bc.py  bcq.py  cql.py  edac.py  iql.py  mcq.py  prdc.py  sac.py  td3.py  td3bc.py
OffDRL/policy/transformer_rl/: dt.py
OffDRL/trainer/: __init__.py  model_free.py
OffDRL/utils/: logger.py  noise.py
examples/: bc.py  bcq.py  cql.py  diffusion_ql.py  dt.py  edac.py  iql.py  mcq.py  plotter.py  prdc.py  td3bc.py  utils.py
tests/: test_diffusion_ql.py  test_replay_buffer.py
