[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "offdrl"
version = "0.1.0"
description = "A modular offline reinforcement learning research toolkit."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "lihao"}
]
dependencies = [
  "numpy>=1.24",
  "torch>=2.1",
  "gymnasium>=0.29",
  "tqdm>=4.66",
  "scikit-learn>=1.3",
  "tensorboard>=2.14"
]
keywords = ["offline reinforcement learning", "reinforcement learning", "pytorch"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[project.optional-dependencies]
examples = [
  "h5py>=3.10",
  "matplotlib>=3.8",
  "pandas>=2.0"
]
dev = [
  "pytest>=8.0",
  "ruff>=0.4"
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["OffDRL*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
