[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "offdrl"
version = "0.1.0"
description = "Modular offline reinforcement learning library"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "lihao" }
]
dependencies = [
  "numpy",
  "torch"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["OffDRL*"]